--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "ecommerce-backend",
+  "name": "inventory",
   "version": "0.0.1",
-  "description": "made with nest, its a beautiful backend app developed with clean architecture",
-  "author": "Ermiyas Tsegabu, Azmeru Gebreazgi",
+  "description": "",
+  "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -21,60 +20,65 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/config": "^0.5.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/jwt": "^7.1.0",
-    "@nestjs/passport": "^7.1.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/schedule": "^0.4.1",
-    "@nestjs/swagger": "^4.6.1",
-    "@nestjs/typeorm": "^7.1.0",
-    "@types/nodemailer": "^6.4.0",
-    "bcrypt": "^5.0.0",
-    "cache-manager": "^3.4.0",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
+    "@nestjs/cache-manager": "^2.0.1",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^2.0.0",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^3.0.1",
+    "@nestjs/swagger": "^7.0.12",
+    "@nestjs/throttler": "^4.1.0",
+    "@nestjs/typeorm": "^10.0.0",
+    "@types/express-rate-limit": "^6.0.0",
+    "@types/nodemailer": "^6.4.8",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
+    "bcryptjs": "^2.4.3",
+    "cache-manager": "^5.2.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "csurf": "^1.11.0",
-    "dotenv": "^8.2.0",
-    "express-rate-limit": "^5.1.3",
-    "helmet": "^4.1.1",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
+    "dotenv": "^16.3.1",
+    "helmet": "^7.0.0",
+    "mysql2": "^3.4.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "multer": "^1.4.2",
-    "mysql": "^2.18.1",
-    "nodemailer": "^6.4.13",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
-    "swagger-ui-express": "^4.1.4",
-    "typeorm": "^0.2.25"
+    "rxjs": "^7.8.1",
+    "save": "^2.9.0",
+    "save-dev": "^0.0.1-security",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@types/express": "^4.17.3",
-    "@types/jest": "25.2.3",
-    "@types/node": "^13.9.1",
-    "@types/passport-jwt": "^3.0.3",
-    "@types/passport-local": "^1.0.33",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "3.0.2",
-    "@typescript-eslint/parser": "3.0.2",
-    "eslint": "7.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "jest": "26.0.1",
-    "prettier": "^1.19.1",
-    "supertest": "^4.0.2",
-    "ts-jest": "26.1.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cron": "^2.0.1",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^20.3.1",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.8",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -83,10 +87,13 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": ".spec.ts$",
+    "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
