--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inventory",
+  "name": "shopping_mall",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -45,6 +45,7 @@
     "dotenv": "^16.3.1",
     "helmet": "^7.0.0",
     "mysql2": "^3.4.3",
+    "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
